[gd_scene load_steps=8 format=3 uid="uid://gi2j5epkawvq"]

[ext_resource type="Script" path="res://scripts/projectiles/DirectionalProjectile.gd" id="1_fh1u3"]
[ext_resource type="Script" path="res://scripts/classes/HitBox.gd" id="2_08l4k"]
[ext_resource type="Script" path="res://scripts/projectiles/ProjectileStatComponent.gd" id="2_jlmyi"]
[ext_resource type="Script" path="res://scripts/classes/HurtBox.gd" id="3_wgshj"]

[sub_resource type="SphereShape3D" id="SphereShape3D_fkric"]

[sub_resource type="SphereShape3D" id="SphereShape3D_tqo6o"]
radius = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2jxmf"]

[node name="DirectionalProjectile" type="Node3D"]
script = ExtResource("1_fh1u3")
velocity = Vector3(5, 0, 5)

[node name="StatComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_jlmyi")

[node name="HitBox" type="Area3D" parent="."]
script = ExtResource("2_08l4k")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
shape = SubResource("SphereShape3D_fkric")

[node name="HurtBox" type="Area3D" parent="."]
script = ExtResource("3_wgshj")
ignore_projectiles = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
shape = SubResource("SphereShape3D_tqo6o")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, 0, 0, -0.5)
mesh = SubResource("CapsuleMesh_2jxmf")

[connection signal="hit" from="HitBox" to="StatComponent" method="_on_hit"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt"]
